--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "devDependencies": {
-  },
   "name": "testnodejs",
   "version": "1.0.0",
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "css-loader": "^0.28.7",
-    "echarts-for-react": "^1.4.4",
-    "express": "^4.15.4",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "react-bootstrap": "^0.31.2",
-    "react-bootstrap-datetimepicker": "0.0.22",
-    "react-bootstrap-table": "^4.0.3",
-    "react-countup": "^2.2.0",
-    "react-scroll": "^1.5.4",
-    "serialport": "^6.0.4",
-    "style-loader": "^0.18.2",
-    "url": "^0.11.0",
-    "url-loader": "^0.5.9",
+    "antd": "^3.0.1",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bootstrap": "^3.3.7",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.7",
+    "dgram": "^1.0.1",
+    "echarts-for-react": "^1.4.4",
+    "express": "^4.15.4",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
-    "mockjs": "^1.0.1-beta3",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "mongodb": "^2.2.31",
+    "os": "^0.1.1",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.2",
+    "react-bootstrap-datetimepicker": "0.0.22",
+    "react-bootstrap-table": "^4.0.3",
+    "react-countup": "^2.2.0",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
+    "react-scroll": "^1.5.4",
     "socket.io": "^2.0.3",
+    "style-loader": "^0.18.2",
+    "url": "^0.11.0",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
